force-app/main/default/objects/Account_Team_And_Authorizations__c/Account_Team_And_Authorizations__c.object-meta.xml
<CustomObject>
    <description>This object is used when creating Account Team and Authorizations related to the kontrakt</description>
    <label>Account Team And Authorizations</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Account Team And Authorizations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team And Authorizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>