force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team And Authorizations</relationshipLabel>
    <relationshipName>Account_Team_And_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>