force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Kontrakt__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>