force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Account_SPGroupId__c.field-meta.xml
<CustomField>
    <fullName>Account_SPGroupId__c</fullName>
    <formula>Kontrakt__r.Account__r.SPGroupID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SPGroupId</label>
    <type>Text</type>
</CustomField>