force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>Oppdragsteam og Fullmakter</inlineHelpText>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account_Team</fullName>
                <default>true</default>
                <label>Account Team</label>
            </value>
            <value>
                <fullName>Authorizations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>