force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to allow Kontrakt Process to update Account Owner and Authorized Accountant</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>