force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/CheckUniqueType__c.field-meta.xml
<CustomField>
    <fullName>CheckUniqueType__c</fullName>
    <label>CheckUniqueType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>