force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Dataloader_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Dataloader_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger Project Manager sharing flow when set to true by dataloader.</description>
    <label>Dataloader Checkbox</label>
    <type>Checkbox</type>
</CustomField>