force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Kontrakt__c.field-meta.xml
<CustomField>
    <fullName>Kontrakt__c</fullName>
    <label>Kontrakt</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Oppdragsteam_Fullmakter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>