force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oppdragsteam_Fullmakter</relationshipName>
    <type>Lookup</type>
</CustomField>