force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Responsible_Email__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Email__c</fullName>
    <formula>Responsible__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible Email</label>
    <type>Text</type>
</CustomField>