force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Oppdragsteam_Fullmakter</valueSetName>
    </valueSet>
</CustomField>