force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Type_Value__c</fullName>
    <formula>TEXT(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Value</label>
    <type>Text</type>
</CustomField>