force-app/main/default/objects/Account_Team_And_Authorizations__c/fields/User_Alias__c.field-meta.xml
<CustomField>
    <fullName>User_Alias__c</fullName>
    <formula>Responsible__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Alias</label>
    <type>Text</type>
</CustomField>