force-app/main/default/objects/Account_Team_And_Authorizations__c/validationRules/AO_and_OA_must_be_created_from_Kontrakt.validationRule-meta.xml
<ValidationRule>
    <fullName>AO_and_OA_must_be_created_from_Kontrakt</fullName>
    <active>true</active>
    <description>&amp;&amp;
$User.Id &lt;&gt; Kontrakt__r.Account_Owner_KA__c &amp;&amp;
$User.Id &lt;&gt; Kontrakt__r.Assignment_Responsible__c</description>
    <errorConditionFormula>ISNEW()
&amp;&amp;
Bypass_Validation_Rule__c = False
&amp;&amp;
(Type_Value__c = &quot;Oppdragsansvarlig&quot;
||
Type_Value__c = &quot;Account_Owner&quot;)</errorConditionFormula>
    <errorDisplayField>Area__c</errorDisplayField>
    <errorMessage>Account Owner and Authorized Accountant can only be created by automated process.</errorMessage>
</ValidationRule>