force-app/main/default/objects/Account_Team_And_Authorizations__c/validationRules/Not_allowed_to_change_AO_or_OA.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allowed_to_change_AO_or_OA</fullName>
    <active>true</active>
    <description>It is not allowed to change Account Owner or Authorized Accountant</description>
    <errorConditionFormula>ISCHANGED(Responsible__c)
&amp;&amp;
Bypass_Validation_Rule__c = False 
&amp;&amp;
(Type_Value__c = &quot;Oppdragsansvarlig&quot;
||
Type_Value__c  = &quot;Account_Owner&quot;)</errorConditionFormula>
    <errorMessage>It is not allowed to change Account Owner or Authorized Accountant, this is done by automated process when changes are done on Kontrakt.</errorMessage>
</ValidationRule>