force-app/main/default/objects/Account_Team_And_Authorizations__c/validationRules/Only_AO_and_AA_can_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_AO_and_AA_can_change</fullName>
    <active>false</active>
    <description>has been exempted for system administrator

$Profile.Name  &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;Automated Process&quot;</description>
    <errorConditionFormula>(ISNEW()
||
ISCHANGED (Responsible__c))
&amp;&amp;
Bypass_Validation_Rule__c = False 
&amp;&amp;
$User.Id &lt;&gt; Kontrakt__r.Account_Owner_KA__c &amp;&amp;
$User.Id &lt;&gt; Kontrakt__r.Assignment_Responsible__c
&amp;&amp;
$Profile.Id  &lt;&gt; &quot;00e1t000001UNCv&quot;</errorConditionFormula>
    <errorMessage>Only Account Owner, Authorized Accountant and System Administrator can create or update members in the Account Team</errorMessage>
</ValidationRule>